[package]
name = "homography"
version = "0.2.0"
edition = "2021"
description = "Homography estimation using point and line correspondences"
authors = ["Eduardo González <edugonzalezvaq@gmail.com>"]
repository = "https://github.com/edugzlez/homography-rs"
license = "MIT"

[dependencies]
nalgebra = "0.33.0"
num-traits = "0.2.19"
